--- a/app/src/main/res/layout/fragment_add_meal_detailes.xml
+++ b/app/src/main/res/layout/fragment_add_meal_detailes.xml
@@ -26,6 +26,7 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:ems="10"
+            android:layout_marginTop="8dp"
             android:layout_marginRight="25dp"
             android:layout_marginLeft="25dp"
             android:gravity="center"
@@ -68,33 +69,34 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginEnd="55dp"
+                android:layout_marginEnd="75dp"
                 android:text="النوع"
+                android:layout_centerVertical="true"
                 android:textColor="#ffffff"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="55dp" />
+                android:layout_marginRight="75dp"
+                android:layout_alignParentRight="true" />
 
             <TextView
                 android:id="@+id/totalcals"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
+                android:layout_marginStart="72dp"
+                android:text="الكمية"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="54dp"
-                android:layout_marginStart="54dp"
-                android:text="مجموع السعرات"
-                android:textColor="#ffffff" />
+                android:textColor="#ffffff"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="72dp" />
         </RelativeLayout>
 
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerview"
             android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:layout_marginTop="8dp"
+            android:layout_height="217dp"
             android:layout_marginBottom="10dp"
+            android:layout_marginTop="8dp"
             android:background="@color/grey">
 
         </android.support.v7.widget.RecyclerView>
