--- a/app/src/main/res/layout/activity_add_new_exercise.xml
+++ b/app/src/main/res/layout/activity_add_new_exercise.xml
@@ -38,6 +38,7 @@
             android:layout_centerVertical="true"
             android:fontFamily="@font/cairo_semibold"
             android:text="إضافة تمرين جديد"
+            android:textColor="@color/blackGrey"
             android:textSize="16sp" />
     </RelativeLayout>
     <android.support.v7.widget.CardView
