--- a/app/src/main/res/layout/activity_add_new_meal.xml
+++ b/app/src/main/res/layout/activity_add_new_meal.xml
@@ -83,11 +83,11 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager_id"
         android:layout_width="match_parent"
-        android:layout_height="320dp"
+        android:layout_height="394dp"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/tablayout_id"
-        android:background="@color/grey"
-        android:layout_alignParentLeft="true"></android.support.v4.view.ViewPager>
+        android:background="@color/grey"></android.support.v4.view.ViewPager>
 
     <Button
         android:id="@+id/saveMealBtn"
