--- a/app/src/main/res/layout/meal_card_view.xml
+++ b/app/src/main/res/layout/meal_card_view.xml
@@ -21,18 +21,20 @@
 
             <EditText
                 android:id="@+id/txtQuantity"
-                android:layout_width="74dp"
+                android:layout_width="59dp"
                 android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginStart="37dp"
-                android:background="@drawable/custom_table_text"
-                android:inputType="number"
-                android:gravity="center"
                 android:layout_centerVertical="true"
+                android:layout_marginLeft="52dp"
+                android:layout_marginStart="52dp"
+                android:layout_marginVertical="5dp"
+                android:background="@drawable/custom_table_text"
+                android:gravity="center"
+                android:inputType="number"
                 android:textColor="@color/blackGrey"
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="37dp" />
+                android:textSize="14sp" />
 
             <EditText
                 android:id="@+id/txtIngr"
@@ -40,16 +42,27 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginEnd="34dp"
+                android:layout_marginEnd="32dp"
                 android:background="@drawable/custom_table_text"
-
                 android:gravity="center"
-                android:layout_centerVertical="true"
+                android:layout_marginVertical="5dp"
 
                 android:inputType="textPersonName"
                 android:textColor="@color/blackGrey"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="34dp" />
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/textView10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginBottom="5dp"
+                android:layout_marginStart="27dp"
+                android:text="غرام"
+                android:textSize="12sp"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="27dp" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
