--- a/app/src/main/res/layout/meal_card_view_text_view.xml
+++ b/app/src/main/res/layout/meal_card_view_text_view.xml
@@ -22,17 +22,33 @@
             >
 
             <TextView
+                android:id="@+id/textView16"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="39dp"
+                android:layout_marginBottom="7dp"
+                android:text="غرام"
+                android:textSize="12sp"
+                android:layout_marginLeft="39dp"
+                android:layout_alignParentLeft="true" />
+
+            <TextView
                 android:id="@+id/txtQuantity"
-                android:layout_width="74dp"
-                android:layout_height="match_parent"
+                android:layout_width="42dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginStart="36dp"
-                android:ems="10"
                 android:layout_centerVertical="true"
-                android:inputType="number"
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="36dp" />
+                android:layout_marginLeft="68dp"
+                android:gravity="center"
+                android:layout_marginStart="68dp"
+                android:layout_marginVertical="5dp"
+                android:ems="10"
+                android:textSize="14sp"
+                android:inputType="number" />
 
             <TextView
                 android:id="@+id/txtIngr"
@@ -42,8 +58,9 @@
                 android:layout_alignParentTop="true"
                 android:layout_marginEnd="37dp"
                 android:ems="10"
+                android:gravity="center"
                 android:layout_centerVertical="true"
-
+                android:layout_marginVertical="5dp"
                 android:inputType="textPersonName"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="37dp" />
