--- a/app/src/main/res/layout/fragment_track_progress_fragment_admin.xml
+++ b/app/src/main/res/layout/fragment_track_progress_fragment_admin.xml
@@ -33,10 +33,10 @@
         android:id="@+id/relaSpinner0"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginStart="30dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginStart="25dp"
         android:layout_marginTop="12dp"
         android:background="@drawable/custom_spinner_white"
         app:layout_constraintEnd_toEndOf="parent"
@@ -169,17 +169,17 @@
     </RelativeLayout>
 
     <EditText
-        android:id="@+id/btnUpdateWeight"
+        android:id="@+id/etBrief"
         android:background="@drawable/custom_edit_text_white"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
+        android:layout_height="150dp"
         android:layout_marginHorizontal="25dp"
         android:gravity="center"
-        android:inputType="number"
-        android:text="ادخل الوزن المثالي" />
+        android:inputType="textMultiLine"
+        android:hint="ادخل نبذة عن البرنامج" />
 
     <Button
-        android:id="@+id/etBrief"
+        android:id="@+id/btnUpdateWeight"
         android:layout_marginHorizontal="25dp"
         android:background="@color/scifitBlue"
         android:layout_width="match_parent"
