--- a/app/src/main/res/layout/fragment_track_progress_fragment_user.xml
+++ b/app/src/main/res/layout/fragment_track_progress_fragment_user.xml
@@ -19,6 +19,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+
+
         <TextView
             android:id="@+id/textView18"
             android:layout_width="match_parent"
@@ -142,64 +144,35 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="196dp"
         android:layout_marginHorizontal="25dp"
         android:layout_marginVertical="20dp"
         android:background="@drawable/custom_edit_text_white">
 
         <TextView
-            android:id="@+id/tvPerfectWeight"
-            android:layout_width="40dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="104dp"
-            android:layout_marginStart="104dp"
+            android:layout_marginRight="20dp"
+            android:textColor="@color/blackGrey"
+            android:text="نبذة عن البرنامج"/>
+
+        <TextView
+            android:id="@+id/tvPerfectWeight"
+            android:layout_width="323dp"
+            android:layout_height="139dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="18dp"
             android:background="@drawable/custom_table_text"
             android:gravity="center"
             android:text="..."
             android:textColor="@color/blackGrey"
             android:textSize="18sp" />
 
-        <TextView
-            android:id="@+id/textView288s8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="79dp"
-            android:text="كغ"
-            android:textColor="@color/blackGrey"
-            android:layout_marginLeft="79dp"
-            android:layout_alignParentLeft="true" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="125dp"
-            android:text="وزنك المثالي"
-            android:textColor="@color/blackGrey"
-            android:layout_marginRight="125dp"
-            android:layout_alignParentRight="true" />
-
-        <ImageView
-            android:id="@+id/imageViewnah"
-            android:layout_width="50dp"
-            android:layout_height="40dp"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="63dp"
-            app:srcCompat="@drawable/prize"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="63dp" />
-
     </RelativeLayout>
 
     <Button
-        android:id="@+id/etBrief"
+        android:id="@+id/btnUpdateWeight"
         android:layout_marginHorizontal="25dp"
         android:background="@color/scifitBlue"
         android:layout_width="match_parent"
