--- a/app/src/main/res/layout/activity_meal_ingr.xml
+++ b/app/src/main/res/layout/activity_meal_ingr.xml
@@ -8,6 +8,29 @@
 
     // هذي اللي تسوي البار اللي فوق
 
+    <RelativeLayout
+        android:id="@+id/relative"
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/actionBar"
+        android:background="@color/md_white_1000"
+        app:layout_constraintBottom_toTopOf="@+id/actionBar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+
+        <TextView
+            android:id="@+id/mealNo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/cairo_semibold"
+            android:gravity="center"
+            android:text="وجبة"
+            android:textColor="@color/blackGrey"
+            android:textSize="16sp" />
+    </RelativeLayout>
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/actionBar"
         android:layout_width="match_parent"
@@ -41,40 +64,32 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbarid"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="167dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/actionBar"
+        android:layout_marginTop="33dp"
         android:background="@color/grey"
         android:elevation="0dp"
         android:gravity="center">
 
 
-        <TextView
-            android:id="@+id/mealNo"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="25dp"
-            android:background="#ffff"
-            android:gravity="center"
-            android:text="إسم الوجبة"
-            app:layout_constraintBottom_toTopOf="@+id/mealimg"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:id="@+id/mealimg"
-            android:layout_width="300dp"
-            android:layout_height="130dp"
-            android:layout_marginBottom="150dp"
-            android:layout_marginEnd="14dp"
-            android:layout_marginLeft="13dp"
-            android:layout_marginRight="14dp"
-            android:layout_marginStart="13dp"
-            android:layout_marginTop="5dp"
-            android:src="@drawable/header" />
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="140dp"
+            android:layout_marginHorizontal="45dp"
+            >
+
+            <ImageView
+                android:id="@+id/mealimg"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/addpic" />
+
+        </android.support.v7.widget.CardView>
+
+
 
 
     </android.support.design.widget.AppBarLayout>
@@ -100,19 +115,6 @@
         android:layout_below="@+id/tablayout_id"
         android:layout_above="@+id/bNavigation"
         android:background="@color/grey"/>
-
-    <TextView
-        android:id="@+id/showMealName"
-        android:layout_width="match_parent"
-        android:layout_height="35dp"
-        android:layout_below="@+id/actionBar"
-        android:layout_centerHorizontal="true"
-        android:layout_marginHorizontal="25dp"
-        android:layout_marginVertical="12dp"
-        android:background="@drawable/custom_edit_text_white"
-        android:gravity="center"
-        android:layout_above="@+id/mealImg"
-        android:text="إسم الوجبة" />
 
 
     <android.support.v4.view.ViewPager
