--- a/app/src/main/res/layout/fragment_track_progress_fragment_admin.xml
+++ b/app/src/main/res/layout/fragment_track_progress_fragment_admin.xml
@@ -188,15 +188,23 @@
         android:textColor="@color/md_white_1000"
         android:text="تحديث الوزن المثالي" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="تعيين كمدرب جديد"
+        android:layout_marginTop="15dp"
+        android:layout_marginHorizontal="25dp"
+        android:gravity="center"
+        android:background="@drawable/custom_edit_text_white"
+        android:layout_marginRight="15dp"
+        android:textSize="16dp"/>
+
     <RadioGroup
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
         android:layout_marginBottom="8dp"
-
         android:layout_marginHorizontal="25dp"
-
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:orientation="horizontal"
         app:layout_constraintVertical_bias="0.0">
 
