--- a/app/src/main/res/layout/activity_day_meals.xml
+++ b/app/src/main/res/layout/activity_day_meals.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/grey"
     tools:context=".Activity.DayMealsActivity">
 
 
@@ -39,13 +40,6 @@
         </RelativeLayout>
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/mealrecycler"
-        android:layout_width="match_parent"
-        android:layout_height="562dp"
-        android:layout_below="@+id/appbarid"
-        android:layout_marginTop="47dp" />
-
     <TextView
         android:id="@+id/daytv"
         android:layout_width="match_parent"
@@ -56,6 +50,14 @@
         android:layout_below="@+id/appbarid"
         android:textColor="@color/blackGrey"
         android:text="يوم 1" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/mealrecycler"
+        android:layout_width="match_parent"
+        android:layout_height="659dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true" />
 
 
 </RelativeLayout>
