--- a/app/src/main/res/layout/fragment_meals_details.xml
+++ b/app/src/main/res/layout/fragment_meals_details.xml
@@ -50,11 +50,11 @@
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginEnd="42dp"
-                android:layout_marginRight="45dp"
+                android:layout_marginEnd="55dp"
                 android:layout_centerVertical="true"
                 android:text="نوع السعرات "
-                android:textColor="#ffffff" />
+                android:textColor="#ffffff"
+                android:layout_marginRight="55dp" />
 
             <TextView
                 android:id="@+id/totalcals"
@@ -63,8 +63,8 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginLeft="54dp"
-                android:layout_marginStart="51dp"
+                android:layout_marginLeft="40dp"
+                android:layout_marginStart="40dp"
                 android:layout_centerVertical="true"
                 android:text="مجموع السعرات"
                 android:textColor="#ffffff" />
