--- a/app/src/main/res/layout/cardview_addworkout.xml
+++ b/app/src/main/res/layout/cardview_addworkout.xml
@@ -38,22 +38,18 @@
                 android:layout_height="27dp"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentEnd="true"
-                android:layout_marginEnd="45dp"
+                android:layout_marginEnd="24dp"
                 android:paddingBottom="3dp"
-                android:src="@drawable/workoutcount"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="45dp" />
+                android:src="@drawable/workoutcount" />
 
             <ImageView
                 android:layout_width="26dp"
                 android:layout_height="27dp"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentStart="true"
-                android:layout_marginStart="165dp"
+                android:layout_marginStart="130dp"
                 android:paddingBottom="3dp"
-                android:src="@drawable/mouscle"
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="165dp" />
+                android:src="@drawable/mouscle" />
 
             <TextView
                 android:id="@+id/txtMu"
@@ -61,23 +57,22 @@
                 android:layout_height="30dp"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentStart="true"
-                android:layout_marginStart="38dp"
-                android:layout_centerVertical="true"
                 android:gravity="right"
-                android:text="العضلات المستهدفة" />
+                android:text="العضلات المستهدفة"
+                android:layout_alignParentLeft="true" />
 
             <TextView
                 android:id="@+id/txtNameExercise"
-                android:layout_width="wrap_content"
+                android:layout_width="142dp"
                 android:layout_height="29dp"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentEnd="true"
-                android:layout_marginEnd="79dp"
-                android:layout_centerVertical="true"
-                android:gravity="right"
-                android:text="إسم التمرين"
                 android:layout_alignParentRight="true"
-                android:layout_marginRight="79dp" />
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="58dp"
+                android:layout_marginRight="58dp"
+                android:gravity="right"
+                android:text="إسم التمرين" />
 
 
         </RelativeLayout>
