edits before presentation

--- a/app/src/main/res/layout/activity_add_new_meal.xml
+++ b/app/src/main/res/layout/activity_add_new_meal.xml
@@ -59,7 +59,7 @@
                 android:id="@+id/mealImg"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/addpic"/>
+                android:src="@drawable/addpic"/>
 
         </android.support.v7.widget.CardView>
 
