--- a/app/src/main/res/layout/card_sets_add.xml
+++ b/app/src/main/res/layout/card_sets_add.xml
@@ -16,7 +16,8 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            >
 
             <TextView
                 android:id="@+id/txtSet"
@@ -47,6 +48,10 @@
                 android:background="@drawable/custom_table_text"
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"/>
+            <Button
+                android:layout_width="44dp"
+                android:layout_height="wrap_content"
+                />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
