--- a/app/src/main/res/layout/card_sets_add.xml
+++ b/app/src/main/res/layout/card_sets_add.xml
@@ -49,8 +49,11 @@
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"/>
             <Button
-                android:layout_width="44dp"
+                android:id="@+id/btn_delet"
+                android:layout_width="33dp"
                 android:layout_height="wrap_content"
+                android:text="X"
+                android:gravity="center_vertical"
                 />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
