--- a/app/src/main/res/layout/meal_card_view.xml
+++ b/app/src/main/res/layout/meal_card_view.xml
@@ -50,6 +50,13 @@
                 android:inputType="textPersonName"
                 android:textColor="@color/blackGrey"
                 android:textSize="14sp" />
+            <Button
+                android:id="@+id/btn_delet"
+                android:layout_width="33dp"
+                android:layout_height="wrap_content"
+                android:text="X"
+                android:gravity="center_vertical"
+                />
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
