--- a/app/src/main/res/layout/meal_card_view_text_view.xml
+++ b/app/src/main/res/layout/meal_card_view_text_view.xml
@@ -47,6 +47,13 @@
                 android:gravity="center"
                 android:inputType="textPersonName"
                 android:textAlignment="center" />
+            <Button
+                android:id="@+id/btn_delet"
+                android:layout_width="33dp"
+                android:layout_height="wrap_content"
+                android:text="X"
+                android:gravity="center_vertical"
+                />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
