--- a/app/src/main/res/layout/activity_inside_exercise.xml
+++ b/app/src/main/res/layout/activity_inside_exercise.xml
@@ -83,6 +83,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@drawable/welcome_screen" />
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:id="@+id/progressBar"/>
     </android.support.v7.widget.CardView>
 
     <TextView
