--- a/app/src/main/res/layout/cardview_addworkout.xml
+++ b/app/src/main/res/layout/cardview_addworkout.xml
@@ -27,11 +27,19 @@
             android:layout_height="match_parent">
 
 
+
+
             <ImageView
                 android:id="@+id/imageViewMu"
                 android:layout_width="match_parent"
                 android:layout_height="170dp"
                 android:scaleType="centerCrop" />
+
+            <ImageView
+                android:id="@+id/ivtargtedMu"
+                android:layout_width="59dp"
+                android:layout_height="54dp"
+                android:scaleType="fitStart"/>
 
             <ImageView
                 android:layout_width="26dp"
@@ -40,7 +48,9 @@
                 android:layout_alignParentEnd="true"
                 android:layout_marginEnd="24dp"
                 android:paddingBottom="3dp"
-                android:src="@drawable/workoutcount" />
+                android:src="@drawable/workoutcount"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="24dp" />
 
             <ImageView
                 android:layout_width="26dp"
@@ -49,7 +59,9 @@
                 android:layout_alignParentStart="true"
                 android:layout_marginStart="130dp"
                 android:paddingBottom="3dp"
-                android:src="@drawable/mouscle" />
+                android:src="@drawable/mouscle"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="130dp" />
 
             <TextView
                 android:id="@+id/txtMu"
