--- a/app/src/main/res/layout/fragment_meals_details.xml
+++ b/app/src/main/res/layout/fragment_meals_details.xml
@@ -52,7 +52,7 @@
                 android:layout_alignParentTop="true"
                 android:layout_marginEnd="55dp"
                 android:layout_centerVertical="true"
-                android:text="نوع السعرات "
+                android:text="العناصر الغذائية"
                 android:textColor="#ffffff"
                 android:layout_marginRight="55dp" />
 
@@ -66,7 +66,7 @@
                 android:layout_marginLeft="40dp"
                 android:layout_marginStart="40dp"
                 android:layout_centerVertical="true"
-                android:text="مجموع السعرات"
+                android:text="الكمية"
                 android:textColor="#ffffff" />
         </RelativeLayout>
 
