--- a/app/src/main/res/layout/fragment_add_meal_detailes.xml
+++ b/app/src/main/res/layout/fragment_add_meal_detailes.xml
@@ -66,6 +66,7 @@
 
             <TextView
                 android:id="@+id/textView9"
+                android:layout_marginTop="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
@@ -79,12 +80,13 @@
 
             <TextView
                 android:id="@+id/totalcals"
+                android:layout_marginTop="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginStart="72dp"
-                android:text="الكمية"
+                android:layout_marginStart="40dp"
+                android:text="الكمية  (جم)"
                 android:layout_centerVertical="true"
                 android:textColor="#ffffff"
                 android:layout_alignParentLeft="true"
@@ -97,7 +99,6 @@
             android:layout_width="match_parent"
             android:layout_height="188dp"
             android:layout_marginBottom="10dp"
-            android:layout_marginTop="8dp"
             android:background="@color/grey">
 
         </android.support.v7.widget.RecyclerView>
