--- a/app/src/main/res/layout/fragment_add_meal_ing.xml
+++ b/app/src/main/res/layout/fragment_add_meal_ing.xml
@@ -21,10 +21,10 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="60dp"
             android:layout_marginRight="25dp"
             android:layout_marginLeft="25dp"
-            android:layout_marginBottom="5dp"
+            android:layout_marginBottom="2dp"
             android:background="@drawable/table_diet">
 
             <TextView
@@ -46,16 +46,17 @@
             android:layout_height="35dp"
             android:layout_marginLeft="25dp"
             android:layout_marginRight="25dp"
-
             android:background="@drawable/table_diet_under"
             android:id="@+id/relativeLayout3">
 
             <TextView
                 android:id="@+id/textView9"
+                android:layout_marginTop="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="52dp"
                 android:layout_marginRight="52dp"
+                android:gravity="center"
                 android:text="العناصر الغذائية"
                 android:textColor="#ffffff"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -63,11 +64,12 @@
 
             <TextView
                 android:id="@+id/totalcals"
+                android:layout_marginTop="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="40dp"
                 android:layout_marginStart="40dp"
-                android:text="الكمية"
+                android:text="الكمية  (جم)"
                 android:textColor="#ffffff"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -76,7 +78,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerview"
             android:layout_width="match_parent"
-            android:layout_height="177dp"
+            android:layout_height="200dp"
             android:background="@color/grey">
 
         </android.support.v7.widget.RecyclerView>
