--- a/app/src/main/res/layout/meal_card_view.xml
+++ b/app/src/main/res/layout/meal_card_view.xml
@@ -49,7 +49,9 @@
 
                 android:inputType="textPersonName"
                 android:textColor="@color/blackGrey"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="32dp" />
             <Button
                 android:id="@+id/btn_delet"
                 android:layout_width="33dp"
