--- a/app/src/main/res/layout/meal_card_view_text_view.xml
+++ b/app/src/main/res/layout/meal_card_view_text_view.xml
@@ -33,7 +33,9 @@
                 android:gravity="center"
                 android:inputType="number"
                 android:textAlignment="center"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                android:layout_marginLeft="51dp"
+                android:layout_alignParentLeft="true" />
 
             <TextView
                 android:id="@+id/txtIngr"
@@ -46,14 +48,9 @@
                 android:ems="10"
                 android:gravity="center"
                 android:inputType="textPersonName"
-                android:textAlignment="center" />
-            <Button
-                android:id="@+id/btn_delet"
-                android:layout_width="33dp"
-                android:layout_height="wrap_content"
-                android:text="X"
-                android:gravity="center_vertical"
-                />
+                android:textAlignment="center"
+                android:layout_marginRight="28dp"
+                android:layout_alignParentRight="true" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
