--- a/app/src/main/res/layout/activity_add_new_meal.xml
+++ b/app/src/main/res/layout/activity_add_new_meal.xml
@@ -105,6 +105,7 @@
     <EditText
         android:id="@+id/etTotalCal"
         android:layout_width="match_parent"
+        android:maxLength="5"
         android:layout_height="wrap_content"
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp"
