--- a/app/src/main/res/layout/activity_update_profile.xml
+++ b/app/src/main/res/layout/activity_update_profile.xml
@@ -123,13 +123,14 @@
         android:layout_marginLeft="30dp"
         android:layout_marginRight="10dp"
         android:layout_marginStart="30dp"
+        android:maxLength="3"
         android:layout_marginTop="11dp"
         android:background="@drawable/custom_edit_text_white"
         android:drawablePadding="10dp"
         android:drawableRight="@drawable/age"
         android:ems="10"
         android:gravity="right"
-        android:inputType="textEmailAddress"
+        android:inputType="number"
         android:paddingBottom="7dp"
         android:paddingRight="10dp"
         android:paddingTop="8.5dp"
@@ -144,13 +145,14 @@
         android:layout_height="45dp"
         android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp"
+        android:maxLength="3"
         android:layout_marginTop="11dp"
         android:background="@drawable/custom_edit_text_white"
         android:drawablePadding="10dp"
         android:drawableRight="@drawable/height"
         android:ems="10"
         android:gravity="right"
-        android:inputType="textEmailAddress"
+        android:inputType="number"
         android:paddingBottom="7dp"
         android:paddingRight="10dp"
         android:paddingTop="8.5dp"
@@ -162,6 +164,7 @@
         android:id="@+id/weightTxt2"
         android:layout_width="108dp"
         android:layout_height="45dp"
+        android:maxLength="3"
         android:layout_marginEnd="30dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="30dp"
@@ -172,7 +175,7 @@
         android:drawableRight="@drawable/wieght"
         android:ems="10"
         android:gravity="right"
-        android:inputType="textEmailAddress"
+        android:inputType="number"
         android:paddingBottom="7dp"
         android:paddingRight="10dp"
         android:paddingTop="8.5dp"
@@ -185,6 +188,7 @@
         android:id="@+id/userNameUpdateTxt"
         android:layout_width="match_parent"
         android:layout_height="45dp"
+        android:maxLength="20"
         android:layout_marginEnd="30dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
