--- a/app/src/main/res/layout/cardview_addworkout.xml
+++ b/app/src/main/res/layout/cardview_addworkout.xml
@@ -22,6 +22,12 @@
         app:contentPaddingLeft="10dp"
         app:cardMaxElevation="15dp">
 
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:id="@+id/progressBar"/>
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
