--- a/app/src/main/res/layout/meal_card_view.xml
+++ b/app/src/main/res/layout/meal_card_view.xml
@@ -22,6 +22,7 @@
             <EditText
                 android:id="@+id/txtQuantity"
                 android:layout_width="59dp"
+                android:maxLength="4"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
@@ -39,6 +40,7 @@
             <EditText
                 android:id="@+id/txtIngr"
                 android:layout_width="156dp"
+                android:maxLength="20"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentTop="true"
