--- a/app/src/main/res/layout/meals_list.xml
+++ b/app/src/main/res/layout/meals_list.xml
@@ -20,10 +20,16 @@
         app:contentPaddingRight="10dp"
         app:contentPaddingLeft="10dp"
         app:cardMaxElevation="15dp">
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:id="@+id/progressBar"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
 
 
             <ImageView
