--- a/app/src/main/res/layout/activity_user_details.xml
+++ b/app/src/main/res/layout/activity_user_details.xml
@@ -14,7 +14,7 @@
 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="">
+        android:layoutDirection="rtl">
 
         // هذي اللي تسوي البار اللي فوق
 
@@ -147,12 +147,13 @@
 
         <EditText
             android:id="@+id/heightTxt"
-            android:layout_width="108dp"
+            android:layout_width="100dp"
             android:layout_height="45dp"
-            android:maxLength="3"
-            android:layout_marginLeft="10dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="18dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="300dp"
             android:background="@drawable/custom_edit_text"
             android:drawablePadding="10dp"
             android:drawableRight="@drawable/height"
@@ -160,14 +161,14 @@
             android:gravity="right"
             android:hint="الطول"
             android:inputType="number"
+            android:maxLength="3"
             android:paddingBottom="7dp"
             android:paddingRight="10dp"
             android:paddingTop="8.5dp"
             android:textSize="16dp"
-            app:layout_constraintEnd_toStartOf="@+id/weightTxt"
-            app:layout_constraintHorizontal_bias="0.176"
-            app:layout_constraintStart_toEndOf="@+id/ageTxt"
-            app:layout_constraintTop_toBottomOf="@+id/userNameTxt" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/actionBar" />
 
 
         <EditText
@@ -196,13 +197,13 @@
 
         <EditText
             android:id="@+id/weightTxt"
-            android:layout_width="108dp"
-            android:maxLength="3"
+            android:layout_width="100dp"
             android:layout_height="45dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="30dp"
-            android:layout_marginRight="30dp"
-            android:layout_marginTop="18dp"
+            android:layout_marginEnd="17dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="17dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="300dp"
             android:background="@drawable/custom_edit_text"
             android:drawablePadding="10dp"
             android:drawableRight="@drawable/wieght"
@@ -210,21 +211,24 @@
             android:gravity="right"
             android:hint="الوزن"
             android:inputType="number"
+            android:maxLength="3"
             android:paddingBottom="7dp"
             android:paddingRight="10dp"
             android:paddingTop="8.5dp"
             android:textSize="16dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/userNameTxt"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintHorizontal_bias="0.956"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/actionBar" />
 
         <EditText
             android:id="@+id/ageTxt"
-            android:layout_width="108dp"
-            android:maxLength="2"
+            android:layout_width="100dp"
             android:layout_height="45dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="18dp"
+            android:layout_marginEnd="233dp"
+            android:layout_marginLeft="28dp"
+            android:layout_marginRight="233dp"
+            android:layout_marginTop="300dp"
             android:background="@drawable/custom_edit_text"
             android:drawablePadding="10dp"
             android:drawableRight="@drawable/age"
@@ -232,12 +236,14 @@
             android:gravity="right"
             android:hint="العمر"
             android:inputType="number"
+            android:maxLength="2"
             android:paddingBottom="7dp"
             android:paddingRight="10dp"
             android:paddingTop="8.5dp"
             android:textSize="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/userNameTxt" />
+            app:layout_constraintTop_toBottomOf="@+id/actionBar" />
 
         <TextView
             android:id="@+id/textView4"
