--- a/app/src/main/res/layout/fragment_meals_details.xml
+++ b/app/src/main/res/layout/fragment_meals_details.xml
@@ -66,7 +66,7 @@
                 android:layout_marginLeft="40dp"
                 android:layout_marginStart="40dp"
                 android:layout_centerVertical="true"
-                android:text="الكمية"
+                android:text="الكمية (غرام)"
                 android:textColor="#ffffff" />
         </RelativeLayout>
 
