--- a/app/src/main/res/layout/their_message.xml
+++ b/app/src/main/res/layout/their_message.xml
@@ -16,7 +16,7 @@ android:clipToPadding="false">
     android:layout_height="34dp" />
 
 <TextView
-    android:id="@+id/name"
+    android:id="@+id/text_message_name"
     android:layout_marginLeft="15dp"
     android:layout_toRightOf="@+id/avatar"
     android:layout_alignTop="@+id/avatar"
@@ -28,9 +28,9 @@ android:clipToPadding="false">
 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:id="@+id/message_body"
-    android:layout_below="@+id/name"
-    android:layout_alignLeft="@+id/name"
+    android:id="@+id/text_message_body"
+    android:layout_below="@+id/text_message_name"
+    android:layout_alignLeft="@+id/text_message_name"
     android:background="@drawable/their_message"
     android:paddingVertical="12dp"
     android:paddingHorizontal="16dp"
@@ -38,4 +38,13 @@ android:clipToPadding="false">
     android:textSize="18dp"
     android:text="How are you doing? This is a long message that should probably wrap."
     />
+    <TextView
+        android:id="@+id/text_message_time"
+        android:text="11:40"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="10sp"
+        android:layout_marginLeft="4dp"
+        android:layout_toRightOf="@+id/text_message_body"
+        android:layout_below="@+id/text_message_body"/>
 </RelativeLayout>
